added interface to repository, make API retrieve onResume and Implement GroupDetail

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,12 +5,27 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/groupFragment">
 
-
     <fragment
         android:id="@+id/groupFragment"
         android:name="com.example.grouptaskandroid.fragments.GroupFragment"
         android:label="My Groups"
-        tools:layout="@layout/fragment_group" />
+        tools:layout="@layout/fragment_group">
+
+        <action
+            android:id="@+id/action_groupFragment_to_groupDetailFragment"
+            app:destination="@id/groupDetailFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/groupDetailFragment"
+        android:name="com.example.grouptaskandroid.fragments.GroupDetailFragment"
+        android:label="Group Detail"
+        tools:layout="@layout/fragment_group_detail">
+        <argument
+            android:name="groupId"
+            android:defaultValue="0"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/taskFragment"
