--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -5,8 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".fragments.GroupDetailFragment">
 
+    <Button
+        android:id="@+id/group_detail_memberButton"
+        android:text="@string/group_detail_members"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/group_detail_recyclerView"
+        android:layout_below="@id/group_detail_memberButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
