added remove-member and remove-task functionality

--- a/app/src/main/res/layout/fragment_member_row.xml
+++ b/app/src/main/res/layout/fragment_member_row.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/fragment_member_row_memberName"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/fragment_member_row_memberName"
+            android:layout_width="0dp"
+            android:layout_weight="10"
+            android:layout_height="wrap_content" />
+
+        <ImageButton
+            android:id="@+id/fragment_member_row_deleteButton"
+            android:background="@android:drawable/ic_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </LinearLayout>
