--- a/app/src/main/res/layout/fragment_member_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_member_list_dialog.xml
@@ -44,7 +44,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/member_list_memberList"
         android:layout_below="@id/member_list_memberListTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
