--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -8,10 +8,18 @@
     android:layout_height="match_parent"
     tools:context=".fragments.AddTaskDialogFragment">
 
-    <TextView
-        android:text="@string/add_task_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:text="@string/add_task_title"
+            style="@style/TitleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -20,12 +28,14 @@
 
         <TextView
             android:text="@string/add_task_name"
+            style="@style/Text"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/add_task_name"
+            style="@style/Text"
             android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
@@ -34,26 +44,31 @@
 
     <TextView
         android:text="@string/add_task_desc"
+        style="@style/Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/add_task_desc"
+        style="@style/Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:text="@string/add_task_inCharge"
+        style="@style/Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Spinner
         android:id="@+id/add_task_inCharge"
+        style="@style/Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:text="@string/add_task_dueDate"
+        style="@style/Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -65,6 +80,7 @@
 
         <EditText
             android:id="@+id/add_task_dueDate"
+            style="@style/Text"
             android:layout_weight="5"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
