--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -8,6 +8,7 @@
     <Button
         android:id="@+id/group_detail_memberButton"
         android:text="@string/group_detail_members"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
