--- a/app/src/main/res/layout/fragment_group_row.xml
+++ b/app/src/main/res/layout/fragment_group_row.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
+            style="@style/SubTitleText"
             android:id="@+id/group_row_name"
             android:padding="10dp"
             android:layout_width="match_parent"
