--- a/app/src/main/res/layout/fragment_member_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_member_list_dialog.xml
@@ -3,18 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="20dp"
     tools:context=".fragments.MemberListDialogFragment">
 
     <TextView
         android:id="@+id/member_list_addMemberTitle"
-        android:text="Add Member"
+        style="@style/TitleText"
+        android:gravity="center_horizontal"
+        android:layout_margin="5dp"
+        android:text="ADD NEW MEMBER"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <LinearLayout
         android:id="@+id/member_list_addMemberLayout"
+        android:layout_marginVertical="5dp"
         android:layout_below="@id/member_list_addMemberTitle"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -22,6 +27,7 @@
         <EditText
             android:id="@+id/member_list_memberUsername"
             android:layout_width="0dp"
+            style="@style/Text"
             android:layout_weight="3"
             android:layout_height="wrap_content" />
 
@@ -29,6 +35,7 @@
             android:id="@+id/member_list_addMemberButton"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_margin="10dp"
             android:text="+"
             android:layout_height="wrap_content" />
 
@@ -38,6 +45,7 @@
         android:text="Current Members"
         android:id="@+id/member_list_memberListTitle"
         android:layout_below="@id/member_list_addMemberLayout"
+        style="@style/SubTitleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
